# advent-of-code

./: .gitignore  README.md
2019/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  11.hs  12.hs  14.hs  16.hs  17.hs  18.hs  AoC2019.cabal  Intcode.hs  StateMonad.hs  run
2019/02/: Main.hs
2019/03/: input.txt
2019/04/: Main.hs
2019/09/: Main.hs
2019/10/: Main.hs
2019/13/: 13-patch.txt  Main.hs
2019/14/: 14.py  Main.hs
2019/15/: Main.hs
2019/16/: Main.hs
2019/23/: Main.hs
2019/24/: Main.hs
2020/: AoC2020.cabal  Cargo.toml  go.mod  utils.rs  x2020.cabal
2020/01/: main.rs
2020/02/: input.txt  main.rs
2020/03/: main.rs
2020/04/: main.rs
2020/05/: main.rs
2020/06/: main.rs
2020/07/: main.rs
2020/08/: input.txt  main.rs
2020/09/: Main.hs  input.txt
2020/1/: main.rs
2020/10/: Main.hs  input.txt  part2.lua
2020/11/: Main.hs
2020/12/: Main.hs  sample.txt
2020/13/: Main.hs
2020/14/: Main.hs
2020/15/: Main.hs
2020/16/: Main.hs
2020/17/: Main.hs  main.go
2020/18/: Main.hs
2020/19/: Main.hs
2020/2/: main.rs
2020/20/: Main.hs  part1.lua
2020/21/: Main.hs
2020/22/: Main.hs
2020/23/: Main.hs  part1.lua  part2.lua
2020/24/: Main.hs
2020/25/: Main.hs
2020/3/: main.rs
2020/4/: main.rs
2020/5/: main.rs
2020/6/: main.rs
2021/: 01.sh  02.sh  03.sh  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.hs  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  aoc-2021.cabal
2021/01/: main.sh
2021/02/: main.sh
2021/03/: main.sh
2021/04/: 04-sample.txt  main.py
2021/06/: input.txt  main.py
2021/07/: input.txt  main.py
2021/08/: input.txt  main.py
2021/09/: 09-sample.txt  main.py
2021/10/: 10-sample.txt  input.txt  main.py
2021/11/: input.txt  main.py
2021/12/: main.py
2021/13/: main.py
2021/14/: main.py
2021/15/: main.py
2021/16/: main.py
2021/17/: main.py
2021/18/: main.py
2021/19/: main.py
2021/20/: input.txt  main.py
2021/21/: main.py
2021/22/: main.py
2021/23/: main.py
2021/24/: input.txt  main.c  main.py
2021/25/: input.txt  main.py
2021/input/: 08.txt  09.txt  19.txt
2022/01/: main.py
2022/02/: main.py
2022/03/: main.erl  main.go  main.py
2022/04/: input.txt  main.erl
2022/05/: main.erl
2022/06/: main.c
2022/07/: entry.h  input.txt  main.c  run.sh
2022/08/: input.txt  main.py
2022/09/: main.py
2022/10/: main.py
2022/11/: Main.hs  input.txt  sample-1.txt
2022/12/: main.py  main.sml  run.sh
2022/13/: main.py  main.sml
2022/14/: main.py  part_2_graphic.txt
2022/15/: main.py
2022/16/: main.py
2022/17/: main.py
2022/18/: main.py
2022/19/: main.py
2022/21/: main.py
2023/01/: main.py
2023/02/: main.py
2023/03/: main.py
