cabal-version: 2.4
name:          AoC2019
version:       0.1.0.0
author:        kraftwerk28
maintainer:    kefirchik3@gmail.com

common deps
  other-modules: Intcode
  build-depends:
    , base   ^>=4.14.1.0
    , split  ==0.2.3.4

executable 01
  import:  deps
  main-is: 01.hs

executable 02
  import:  deps
  main-is: 02.hs

executable 03
  import:  deps
  main-is: 03.hs

executable 04
  import:  deps
  main-is: 04.hs

executable 05
  import:  deps
  main-is: 05.hs

executable 06
  import:  deps
  main-is: 06.hs

executable 07
  import:  deps
  main-is: 07.hs

executable 08
  import:  deps
  main-is: 08.hs

executable 09
  import:  deps
  main-is: 09.hs

executable 10
  import:  deps
  main-is: 10.hs
