cabal-version: 2.4
name:          AoC2019
version:       0.1.0.0
author:        kraftwerk28
maintainer:    kefirchik3@gmail.com

common deps
  other-modules: Intcode
  build-depends:
    , base
    , split

executable 01
  import:  deps
  main-is: 01.hs

executable 02
  import:  deps
  main-is: 02.hs

executable 03
  import:  deps
  main-is: 03.hs

executable 04
  import:  deps
  main-is: 04.hs

executable 05
  import:  deps
  main-is: 05.hs

executable 06
  import:  deps
  main-is: 06.hs

executable 07
  import:  deps
  main-is: 07.hs

executable 08
  import:  deps
  main-is: 08.hs

executable 09
  import:  deps
  main-is: 09.hs

executable 10
  import:  deps
  main-is: 10.hs

executable 11
  import:  deps
  main-is: 11.hs

executable 12
  import:  deps
  main-is: 12.hs

executable 13
  import:        deps
  main-is:       13.hs
  build-depends:
    , containers
    , process

executable 14
  import:        deps
  main-is:       14.hs
  build-depends: containers

executable 15
  import:        deps
  main-is:       15.hs
  build-depends: containers

executable 16
  import:  deps
  main-is: 16.hs

executable 17
  import:  deps
  main-is: 17.hs

executable 18
  import:  deps
  main-is: 18.hs

executable 23
  import:  deps
  main-is: 23.hs

executable 24
  import:  deps
  main-is: 24.hs
  build-depends: containers
