[package]
name = "solution"
version = "0.1.0"
authors = ["kraftwerk28 <kefirchik3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"

[[bin]]
name = "1"
path = "1/main.rs"

[[bin]]
name = "2"
path = "2/main.rs"

[[bin]]
name = "3"
path = "3/main.rs"

[[bin]]
name = "4"
path = "4/main.rs"

[[bin]]
name = "5"
path = "5/main.rs"

[lib]
name = "utils"
path = "utils.rs"
