[package]
name = "solution"
version = "0.1.0"
authors = ["kraftwerk28 <kefirchik3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"

[[bin]]
name = "01"
path = "01/main.rs"

[[bin]]
name = "02"
path = "02/main.rs"

[[bin]]
name = "03"
path = "03/main.rs"

[[bin]]
name = "04"
path = "04/main.rs"

[[bin]]
name = "05"
path = "05/main.rs"

[[bin]]
name = "06"
path = "06/main.rs"

[[bin]]
name = "07"
path = "07/main.rs"

[[bin]]
name = "08"
path = "08/main.rs"

[lib]
name = "utils"
path = "utils.rs"
